Add HuggingFace export, IEEE paper, and improved visualizations
- Add export_to_huggingface.py for model export and upload
- Add generate_visualizations.py with better viz for high-accuracy models
- Add IEEE format paper (report/paper.pdf) with funding declaration
- Add technical report (report/technical_report.pdf)
- Update README with meaningful visualizations:
  - Error analysis (all 8 misclassified images)
  - Confidence distribution
  - Hard examples (low-confidence correct predictions)
  - Grad-CAM on errors
- Remove uninformative confusion matrix and ROC curves from README
- Update .gitignore to exclude LaTeX artifacts and HF directory

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,26 @@ data/OCT*
 *.pth
 *.tar.gz
 .ipynb_checkpoints/
+
+# LaTeX build artifacts
+*.aux
+*.log
+*.out
+*.toc
+*.bbl
+*.blg
+*.synctex.gz
+
+# HuggingFace directory (uploaded separately to HF Hub)
+huggingface/
+
+# Old/redundant visualizations (keeping only the informative ones)
+outputs/confusion_matrix.png
+outputs/roc_curves.png
+outputs/class_distribution.png
+outputs/classification_report.txt
+
+# Duplicate outputs in root (keep evaluation/ versions)
+outputs/*.png
+outputs/*.txt
+!outputs/evaluation/
